--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!-- Bootstrap core CSS -->
   <link href="./style/bootstrap.min.css" rel="stylesheet">
 
+  <script type="text/javascript" src="./js/funciones.js"></script>
+
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -44,11 +46,12 @@
           <p class="card-text">Datos por ingresar</p>
 
           <hr>
-          <form>
+          <form name="rellenar">
             <div class="form-group">
 
               <label for="txtEntrada">Numero de identidad</label>
-              <input type="email" class="form-control" id="numId">
+              <input type="text" class="form-control" id="numId"  placeholder = "Ingresar solo numeros sin guiones" onkeypress="soloNumeros(event)" maxlength="13">
+              <br>
               <label for="txtEntrada">Primer nombre</label>
               <input type="text" class="form-control" name="txtEntrada" id="pNombre" required>
               <label for="txtEntrada">Segundo nombre</label>
@@ -66,6 +69,52 @@
               <label for="txtEntrada">Puestos</label>
               <input type="text" class="form-control" name="txtEntrada" id="puesto" required>
             </div>
+
+
+            <main>
+              <div class="container bg-white shadow p-3 mb-5 bg-white rounded mt-5">
+                <div class="row justify-content-center">
+
+                  <div class="card-body">
+                    <p class="card-text">Datos calculados</p>
+
+                    <hr>
+                    <form>
+                      <div class="form-group">
+
+                        <label for="txtEntrada">Nombre completo</label>
+                        <input type="email" class="form-control" id="nCompleto">
+                        <label for="txtEntrada">Deducciones por ahorro</label>
+                        <input type="text" class="form-control" name="txtEntrada" id="dAhorro">
+                        <label for="txtEntrada">Bonificacion</label>
+                        <input type="text" class="form-control" name="txtEntrada" id="bonificacion">
+                        <label for="txtEntrada">Bono navideño</label>
+                        <input type="text" class="form-control" name="txtEntrada" id="bNavidad">
+                        <label for="txtEntrada">Seguro Privado</label>
+                        <input type="text" class="form-control" name="txtEntrada" id="sPrivado">
+                        <label for="txtEntrada">Seguro Social</label>
+                        <input type="text" class="form-control" name="txtEntrada" id="sSocial" required>
+                        <label for="txtEntrada">Sueldo Neto</label>
+                        <input type="text" class="form-control" name="txtEntrada" id="sNeto" required>
+
+                      </div>
+                      <br>
+                    </form>
+
+                    </p>
+                  </div>
+                </div>
+            </main>
+            <div class="btn-group me-2">
+              <button type="submit" class="btn btn-primary">Limpiar Pantalla</button>
+
+            </div>
+            <div class="btn-group me-2">
+              <button type="submit" class="btn btn-primary">Almacenar</button>
+            </div>
+            <div class="btn-group me-2">
+              <button type="submit" class="btn btn-primary">Imprimir</button>
+            </div>
           </form>
 
           </p>
@@ -74,55 +123,12 @@
   </main>
 
   <br>
-  <main>
-    <div class="container bg-white shadow p-3 mb-5 bg-white rounded mt-5">
-      <div class="row justify-content-center">
 
-        <div class="card-body">
-          <p class="card-text">Datos calculados</p>
-
-          <hr>
-          <form>
-            <div class="form-group">
-
-              <label for="txtEntrada">Nombre completo</label>
-              <input type="email" class="form-control" id="nCompleto">
-              <label for="txtEntrada">Deducciones por ahorro</label>
-              <input type="text" class="form-control" name="txtEntrada" id="dAhorro">
-              <label for="txtEntrada">Bonificacion</label>
-              <input type="text" class="form-control" name="txtEntrada" id="bonificacion">
-              <label for="txtEntrada">Bono navideño</label>
-              <input type="text" class="form-control" name="txtEntrada" id="bNavidad">
-              <label for="txtEntrada">Seguro Privado</label>
-              <input type="text" class="form-control" name="txtEntrada" id="sPrivado">
-              <label for="txtEntrada">Seguro Social</label>
-              <input type="text" class="form-control" name="txtEntrada" id="sSocial" required>
-              <label for="txtEntrada">Sueldo Neto</label>
-              <input type="text" class="form-control" name="txtEntrada" id="sNeto" required>
-
-            </div>
-            <br>
-            <div class="btn-group me-2">
-              <button type="submit" class="btn btn-primary">Limpiar Pantalla</button>
-
-            </div>
-            <div class="btn-group me-2">
-            <button type="submit" class="btn btn-primary">Almacenar</button>
-          </div>
-          <div class="btn-group me-2">
-            <button type="submit" class="btn btn-primary">Imprimir</button>
-          </div>
-          </form>
-
-          </p>
-        </div>
-      </div>
-  </main>
 
 
 
   <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-  
+
 
     <h2>Table</h2>
     <div class="table-responsive">
