--- a/index.html
+++ b/index.html
@@ -60,16 +60,27 @@
               <br>
               <label for="input">Apellidos</label>
               <input type="text" class="form-control" name="apellidos" id="apellidos" required>
+              <br>
               <label for="input">Fecha de nacimiento</label>
-              <input type="text" class="form-control" name="fNacimiento" id="fNacimiento" required>
-              <label for="input">Genero</label>
-              <input type="text" class="form-control" name="genero" id="genero" required>
+              <input type="date" class="form-control" name="fNacimiento" id="fNacimiento" required>
+              <br>
+              <select class="form-select" aria-label="Default select example">
+                <option selected>Genero</option>
+                <option value="1">Masculino</option>
+                <option value="2">Femenino</option>
+              </select>
+              <br>
               <label for="input">Sueldo base</label>
-              <input type="text" class="form-control" name="sBase" id="sBase" required>
+              <input type="text" class="form-control" name="sBase"  id="sBase" onkeypress="soloNumeros(event)" required>
+              <br>
               <label for="input">Correo electronico</label>
               <input type="email" class="form-control" id="cElectronico" aria-describedby="emailHelp">
-              <label for="input">Puestos</label>
-              <input type="text" class="form-control" name="puesto" id="puesto" required>
+              <br>
+              <select class="form-select" aria-label="Default select example">
+                <option name="puesto" id="puesto" selected>Puestos</option>
+                <option value="1">Administrativo</option>
+                <option value="2">Conductor</option>
+              </select>            
             </div>
 
 
@@ -85,19 +96,19 @@
                       <div class="form-group">
 
                         <label for="input">Nombre completo</label>
-                        <input type="email" class="form-control" id="nCompleto">
+                        <input type="text" class="form-control" id="nCompleto" readonly>
                         <label for="input">Deducciones por ahorro</label>
-                        <input type="text" class="form-control" name="input" id="dAhorro">
+                        <input type="text" class="form-control" name="input" id="dAhorro" readonly>
                         <label for="input">Bonificacion</label>
-                        <input type="text" class="form-control" name="input" id="bonificacion">
+                        <input type="text" class="form-control" name="input" id="bonificacion" readonly>
                         <label for="input">Bono navideño</label>
-                        <input type="text" class="form-control" name="input" id="bNavidad">
+                        <input type="text" class="form-control" name="input" id="bNavidad" readonly>
                         <label for="input">Seguro Privado</label>
-                        <input type="text" class="form-control" name="input" id="sPrivado">
+                        <input type="text" class="form-control" name="input" id="sPrivado"readonly>
                         <label for="input">Seguro Social</label>
-                        <input type="text" class="form-control" name="input" id="sSocial" required>
+                        <input type="text" class="form-control" name="input" id="sSocial" readonly>
                         <label for="input">Sueldo Neto</label>
-                        <input type="text" class="form-control" name="input" id="sNeto" required>
+                        <input type="text" class="form-control" name="input" id="sNeto" readonly>
 
                       </div>
                       <br>
@@ -112,7 +123,7 @@
 
             </div>
             <div class="btn-group me-2">
-              <button type="submit" class="btn btn-primary" onclick="concatenarNombres()">Almacenar</button>
+              <button type="submit" class="btn btn-primary" onclick="almacenar()">Almacenar</button>
             </div>
             <div class="btn-group me-2">
               <button type="submit" class="btn btn-primary">Imprimir</button>
