--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
               <label for="input">Correo electronico</label>
               <input type="email" class="form-control" id="cElectronico" aria-describedby="emailHelp">
               <br>
-              <select class="form-select" aria-label="Default select example">
-                <option name="puesto" id="puesto" selected>Puestos</option>
+              <select class="form-select" aria-label="Default select example"  id="puesto">
                 <option value="1">Administrativo</option>
                 <option value="2">Conductor</option>
               </select>            
@@ -98,7 +97,7 @@
                         <label for="input">Nombre completo</label>
                         <input type="text" class="form-control" id="nCompleto" readonly>
                         <label for="input">Deducciones por ahorro</label>
-                        <input type="text" class="form-control" name="input" id="dAhorro" readonly>
+                        <input type="text" class="form-control"  id="dAhorro" readonly>
                         <label for="input">Bonificacion</label>
                         <input type="text" class="form-control" name="input" id="bonificacion" readonly>
                         <label for="input">Bono navideño</label>
@@ -119,14 +118,14 @@
                 </div>
             </main>
             <div class="btn-group me-2">
-              <button type="submit" class="btn btn-primary">Limpiar Pantalla</button>
+              <button type="submit" class="btn btn-primary" onclick="limpiarFormulario()">Limpiar Pantalla</button>
 
             </div>
             <div class="btn-group me-2">
               <button type="submit" class="btn btn-primary" onclick="almacenar()">Almacenar</button>
             </div>
             <div class="btn-group me-2">
-              <button type="submit" class="btn btn-primary">Imprimir</button>
+              <button type="submit" class="btn btn-primary"onclick="imprimir()">Imprimir</button>
             </div>
           </form>
 
