--- a/index.html
+++ b/index.html
@@ -50,19 +50,20 @@
             <div class="form-group">
 
               <label for="input">Numero de identidad</label>
-              <input type="text" class="form-control" id="numId"  placeholder = "Ingresar solo numeros sin guiones" onkeypress="soloNumeros(event)" maxlength="13">
+              <input type="text" class="form-control" id="numId" placeholder="Ingresar solo numeros sin guiones"
+                onkeypress="soloNumeros(event)" maxlength="13">
               <br>
               <label for="input">Primer nombre</label>
               <input type="text" class="form-control" name="pNombre" id="pNombre" required>
               <br>
               <label for="input">Segundo nombre</label>
-              <input type="text" class="form-control" name="sNombre" id="sNombre"  required>
+              <input type="text" class="form-control" name="sNombre" id="sNombre" required>
               <br>
               <label for="input">Apellidos</label>
               <input type="text" class="form-control" name="apellidos" id="apellidos" required>
               <br>
               <label for="input">Fecha de nacimiento</label>
-              <input type="date" class="form-control" name="fNacimiento" id="fNacimiento" required>
+              <input type="date" class="form-control" name="fNacimiento" id="datepicker" required>
               <br>
               <select class="form-select" aria-label="Default select example">
                 <option selected>Genero</option>
@@ -71,15 +72,15 @@
               </select>
               <br>
               <label for="input">Sueldo base</label>
-              <input type="text" class="form-control" name="sBase"  id="sBase" onkeypress="soloNumeros(event)" required>
+              <input type="text" class="form-control" name="sBase" id="sBase" onkeypress="soloNumeros(event)" required>
               <br>
               <label for="input">Correo electronico</label>
               <input type="email" class="form-control" id="cElectronico" aria-describedby="emailHelp">
               <br>
-              <select class="form-select" aria-label="Default select example"  id="puesto">
+              <select class="form-select" aria-label="Default select example" id="puesto">
                 <option value="1">Administrativo</option>
                 <option value="2">Conductor</option>
-              </select>            
+              </select>
             </div>
 
 
@@ -91,27 +92,31 @@
                     <p class="card-text">Datos calculados</p>
 
                     <hr>
-                   
-                      <div class="form-group">
 
-                        <label for="input">Nombre completo</label>
-                        <input type="text" class="form-control" id="nCompleto" readonly>
-                        <label for="input">Deducciones por ahorro</label>
-                        <input type="text" class="form-control"  id="dAhorro" readonly>
-                        <label for="input">Bonificacion</label>
-                        <input type="text" class="form-control" name="input" id="bonificacion" readonly>
-                        <label for="input">Bono navideño</label>
-                        <input type="text" class="form-control" name="input" id="bNavidad" readonly>
-                        <label for="input">Seguro Privado</label>
-                        <input type="text" class="form-control" name="input" id="sPrivado"readonly>
-                        <label for="input">Seguro Social</label>
-                        <input type="text" class="form-control" name="input" id="sSocial" readonly>
-                        <label for="input">Sueldo Neto</label>
-                        <input type="text" class="form-control" name="input" id="sNeto" readonly>
+                    <div class="form-group">
 
-                      </div>
-                      <br>
-                  
+                      <label for="input">Nombre completo</label>
+                      <input type="text" class="form-control" id="nCompleto" readonly>
+
+                      <label for="input">Edad</label>
+                      <input type="text" class="form-control" id="edad" readonly>
+
+                      <label for="input">Deducciones por ahorro</label>
+                      <input type="text" class="form-control" id="dAhorro" readonly>
+                      <label for="input">Bonificacion</label>
+                      <input type="text" class="form-control" name="input" id="bonificacion" readonly>
+                      <label for="input">Bono navideño</label>
+                      <input type="text" class="form-control" name="input" id="bNavidad" readonly>
+                      <label for="input">Seguro Privado</label>
+                      <input type="text" class="form-control" name="input" id="sPrivado" readonly>
+                      <label for="input">Seguro Social</label>
+                      <input type="text" class="form-control" name="input" id="sSocial" readonly>
+                      <label for="input">Sueldo Neto</label>
+                      <input type="text" class="form-control" name="input" id="sNeto" readonly>
+
+                    </div>
+                    <br>
+
 
                     </p>
                   </div>
@@ -125,7 +130,7 @@
               <button type="submit" class="btn btn-primary" onclick="almacenar()">Almacenar</button>
             </div>
             <div class="btn-group me-2">
-              <button type="submit" class="btn btn-primary"onclick="imprimir()">Imprimir</button>
+              <button type="submit" class="btn btn-primary" onclick="imprimir()">Imprimir</button>
             </div>
           </form>
 
@@ -140,135 +145,27 @@
 
 
   <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-
-
+    <input type="text" name="name[]" id="TextId">
+    <input type="text" name="name[]" id="TextName">
+    <input type="text" name="name[]" id="TextSurname">
+    <input type="text" name="name[]" id="TextAge">
+    <input type="button" value="Insert" onclick="InsertIntoTable()">
+    </br>
     <h2>Table</h2>
     <div class="table-responsive">
       <table class="table table-striped table-sm">
         <thead>
           <tr>
-            <th>#</th>
-            <th>Header</th>
-            <th>Header</th>
-            <th>Header</th>
-            <th>Header</th>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Age</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>1,001</td>
-            <td>random</td>
-            <td>data</td>
-            <td>placeholder</td>
-            <td>text</td>
-          </tr>
-          <tr>
-            <td>1,002</td>
-            <td>placeholder</td>
-            <td>irrelevant</td>
-            <td>visual</td>
-            <td>layout</td>
-          </tr>
-          <tr>
-            <td>1,003</td>
-            <td>data</td>
-            <td>rich</td>
-            <td>dashboard</td>
-            <td>tabular</td>
-          </tr>
-          <tr>
-            <td>1,003</td>
-            <td>information</td>
-            <td>placeholder</td>
-            <td>illustrative</td>
-            <td>data</td>
-          </tr>
-          <tr>
-            <td>1,004</td>
-            <td>text</td>
-            <td>random</td>
-            <td>layout</td>
-            <td>dashboard</td>
-          </tr>
-          <tr>
-            <td>1,005</td>
-            <td>dashboard</td>
-            <td>irrelevant</td>
-            <td>text</td>
-            <td>placeholder</td>
-          </tr>
-          <tr>
-            <td>1,006</td>
-            <td>dashboard</td>
-            <td>illustrative</td>
-            <td>rich</td>
-            <td>data</td>
-          </tr>
-          <tr>
-            <td>1,007</td>
-            <td>placeholder</td>
-            <td>tabular</td>
-            <td>information</td>
-            <td>irrelevant</td>
-          </tr>
-          <tr>
-            <td>1,008</td>
-            <td>random</td>
-            <td>data</td>
-            <td>placeholder</td>
-            <td>text</td>
-          </tr>
-          <tr>
-            <td>1,009</td>
-            <td>placeholder</td>
-            <td>irrelevant</td>
-            <td>visual</td>
-            <td>layout</td>
-          </tr>
-          <tr>
-            <td>1,010</td>
-            <td>data</td>
-            <td>rich</td>
-            <td>dashboard</td>
-            <td>tabular</td>
-          </tr>
-          <tr>
-            <td>1,011</td>
-            <td>information</td>
-            <td>placeholder</td>
-            <td>illustrative</td>
-            <td>data</td>
-          </tr>
-          <tr>
-            <td>1,012</td>
-            <td>text</td>
-            <td>placeholder</td>
-            <td>layout</td>
-            <td>dashboard</td>
-          </tr>
-          <tr>
-            <td>1,013</td>
-            <td>dashboard</td>
-            <td>irrelevant</td>
-            <td>text</td>
-            <td>visual</td>
-          </tr>
-          <tr>
-            <td>1,014</td>
-            <td>dashboard</td>
-            <td>illustrative</td>
-            <td>rich</td>
-            <td>data</td>
-          </tr>
-          <tr>
-            <td>1,015</td>
-            <td>random</td>
-            <td>tabular</td>
-            <td>information</td>
-            <td>text</td>
-          </tr>
+        <tbody id="TableBody">
         </tbody>
       </table>
+
     </div>
   </main>
   </div>
