--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
           <form name="rellenar">
             <div class="form-group">
 
-              <label for="input">Numero de identidad</label>
+              <label for="numId"  class="form-label" >Numero de identidad</label>
               <input type="text" class="form-control" id="numId" placeholder="Ingresar solo numeros sin guiones"
-                onkeypress="soloNumeros(event)" maxlength="13">
+                onkeypress="soloNumeros(event)" maxlength="13"  required="">
+                <div class="invalid-feedback">
+                  Ingrese num de Id
+                </div>
               <br>
               <label for="input">Primer nombre</label>
               <input type="text" class="form-control" name="pNombre" id="pNombre" required>
@@ -72,12 +75,12 @@
               </select>
               <br>
               <label for="input">Sueldo base</label>
-              <input type="text" class="form-control" name="sBase" id="sBase" onkeypress="soloNumeros(event)" required>
+              <input type="text" class="form-control" name="sBase" id="sBase" onkeypress="soloNumeros(event)"  required>
               <br>
               <label for="input">Correo electronico</label>
               <input type="email" class="form-control" id="cElectronico" aria-describedby="emailHelp">
               <br>
-              <select class="form-select" aria-label="Default select example" id="puesto">
+              <select class="form-select" aria-label="Default select example" id="puesto" >
                 <option value="1">Administrativo</option>
                 <option value="2">Conductor</option>
               </select>
@@ -96,23 +99,19 @@
                     <div class="form-group">
 
                       <label for="input">Nombre completo</label>
-                      <input type="text" class="form-control" id="nCompleto" readonly>
-
-                      <label for="input">Edad</label>
-                      <input type="text" class="form-control" id="edad" readonly>
-
+                      <input type="text" class="form-control" id="nCompleto" name="name[]" readonly>
                       <label for="input">Deducciones por ahorro</label>
-                      <input type="text" class="form-control" id="dAhorro" readonly>
+                      <input type="text" class="form-control" id="dAhorro" name="name[]" readonly>
                       <label for="input">Bonificacion</label>
-                      <input type="text" class="form-control" name="input" id="bonificacion" readonly>
+                      <input type="text" class="form-control" name="name[]" id="bonificacion" readonly>
                       <label for="input">Bono navideño</label>
-                      <input type="text" class="form-control" name="input" id="bNavidad" readonly>
+                      <input type="text" class="form-control" name="name[]" id="bNavidad" readonly>
                       <label for="input">Seguro Privado</label>
-                      <input type="text" class="form-control" name="input" id="sPrivado" readonly>
+                      <input type="text" class="form-control" name="name[]" id="sPrivado" readonly>
                       <label for="input">Seguro Social</label>
-                      <input type="text" class="form-control" name="input" id="sSocial" readonly>
+                      <input type="text" class="form-control" name="name[]" id="sSocial" readonly>
                       <label for="input">Sueldo Neto</label>
-                      <input type="text" class="form-control" name="input" id="sNeto" readonly>
+                      <input type="text" class="form-control" name="name[]" id="sNeto" readonly>
 
                     </div>
                     <br>
@@ -122,12 +121,13 @@
                   </div>
                 </div>
             </main>
+            <p id="error"></p>
             <div class="btn-group me-2">
               <button type="submit" class="btn btn-primary" onclick="limpiarFormulario()">Limpiar Pantalla</button>
 
             </div>
             <div class="btn-group me-2">
-              <button type="submit" class="btn btn-primary" onclick="almacenar()">Almacenar</button>
+              <button type="submit" class="btn btn-primary"  id="almacena" onclick="almacenar()">Almacenar</button>
             </div>
             <div class="btn-group me-2">
               <button type="submit" class="btn btn-primary" onclick="imprimir()">Imprimir</button>
@@ -144,22 +144,20 @@
 
 
 
-  <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-    <input type="text" name="name[]" id="TextId">
-    <input type="text" name="name[]" id="TextName">
-    <input type="text" name="name[]" id="TextSurname">
-    <input type="text" name="name[]" id="TextAge">
-    <input type="button" value="Insert" onclick="InsertIntoTable()">
+  <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">   
     </br>
     <h2>Table</h2>
     <div class="table-responsive">
       <table class="table table-striped table-sm">
         <thead>
           <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Surname</th>
-            <th>Age</th>
+            <th>Nombre Completo</th>
+            <th>Deducciones por ahorro</th>
+            <th>Bonificacion</th>
+            <th>Bono navideño</th>
+            <th>Seguro Privado</th>
+            <th>Seguro Social</th>
+            <th>Sueldo Neto</th>
           </tr>
         </thead>
         <tbody id="TableBody">
