--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                       <label for="input">Bonificacion</label>
                       <input type="text" class="form-control" name="name[]" id="bonificacion" readonly>
                       <label for="input">Bono navideño</label>
-                      <input type="text" class="form-control" name="name[]" id="bNavidad" readonly>
+                      <input type="text" class="form-control"  id="bNavidad" readonly>
                       <label for="input">Seguro Privado</label>
                       <input type="text" class="form-control" name="name[]" id="sPrivado" readonly>
                       <label for="input">Seguro Social</label>
@@ -146,7 +146,7 @@
 
   <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">   
     </br>
-    <h2>Table</h2>
+    <h2>Empleados</h2>
     <div class="table-responsive">
       <table class="table table-striped table-sm">
         <thead>
@@ -154,7 +154,6 @@
             <th>Nombre Completo</th>
             <th>Deducciones por ahorro</th>
             <th>Bonificacion</th>
-            <th>Bono navideño</th>
             <th>Seguro Privado</th>
             <th>Seguro Social</th>
             <th>Sueldo Neto</th>
